--- a/_posts/2014-08-02-ha-syslog.md
+++ b/_posts/2014-08-02-ha-syslog.md
@@ -5,6 +5,8 @@ date: 2014-08-02 18:41:00
 comments: true
 ---
 
+_Corrections made based off of feedback from commenters on the [Reddit post](http://www.reddit.com/r/sysadmin/comments/2cgymp/the_state_of_highlyavailable_syslog/)._
+
 So, you've played with Logstash or one of the multitude of other log aggregation tools (Flume, Fluentd, rsyslog, syslog-ng, etc.) Now you want to start shipping logs from your networking and legacy devices to your logging infrastructure. For most situations, you can just turn on a syslog receiver on your indexer and point your shipper at it. However, when you have to perform maintenance or your indexer experiences downtime, log loss may occur.
 
 There are a lot of different situations at hand that can affect the solution you use for minimizing or eliminating log loss.
@@ -19,7 +21,7 @@ There are a lot of different situations at hand that can affect the solution you
 There are a few things I've noticed in regards to the current landscape of networking devices and logging.
 
 - Network devices generally support both TCP and UDP syslog
-- For the most part, network devices only support one receiver (except for high-end devices, like the Cisco ASA series)
+- Business-class devices (SANs, firewalls, L3 switches, routers, etc.) generally support fanout to multiple syslog receivers
 - I don't know of any network devices that support receiver failover
 
 When it comes to journaling, some receivers come really close.
@@ -67,7 +69,23 @@ Note that this topology will result in event loss if the indexer crashes, but th
 
 ### Active/active
 
-Sometimes log loss is unacceptable, like when dealing with strict auditing requirements. In this case, you would need to stand up multiple receivers, then have your shipper fanout events to them all. Of course, you'll need to perform some time of de-duplication on the log stream. I couldn't find any log indexers that had built-in de-duplication, so I came up with a scalable solution you can place into your logging pipeline. Obviously if your indexer has this feature, you can stop reading and go use that right now. Otherwise, continue on...
+Sometimes log loss is unacceptable, like when dealing with strict auditing requirements. In this case, you would need to stand up multiple receivers, then have your shipper fanout events to them all. Of course, you'll need to perform some kind of de-duplication on the log stream.
+
+There are different places in your pipeline you can perform de-duplication:
+
+- In a message queue shared between the first line of receivers
+- In a downstream indexer
+- In the database that the logs get persisted
+
+Obviously the further up the pipeline you can do de-duplication, the more efficient your remaining pipeline elements can be.
+
+To perform de-duplication after the first line of receivers, you will need to have them push all the events into a queue on RabbitMQ. You can then have a set of workers perform de-duplication and push the unique events into a queue that your downstream indexers use. I describe this solution further down in the post.
+
+When it comes to the log indexers themselves, I couldn't find any that directly support de-duplication. However, if your log indexer has a filter that can hash the event to introduce a unique identifier, you can combine that with a de-duplicating database. I was informed by [ragzilla](http://www.reddit.com/user/ragzilla) on Reddit of this approach. Logstash provides a [checksum filter](http://logstash.net/docs/1.4.2/filters/checksum) that can be used with an Elasticsearch output. The checksum will be used as the document ID which means that when events are inserted into Elasticsearch, it will only accept the first unique event. This will be the easiest solution by far, especially if you only have the front-line receivers and Elasticsearch in your pipeline.
+
+### De-duplicating workers
+
+If your pipeline is more complex, you may need to introduce your own de-duplication solution earlier in the logging pipeline. This solution should scale to high volumes of logs, but will take a bit of thought to implement.
 
 ![De-duplication with multiple receivers](/images/ha-syslog-dedup.png)
 
