Updated syslog post

--- a/_posts/2014-08-02-ha-syslog.md
+++ b/_posts/2014-08-02-ha-syslog.md
@@ -103,9 +103,11 @@ Some notes about this solution:
 - The de-dup worker will prefetch some number of events, process them, then ACK them. If a de-dup worker were to crash, another de-dup worker can pickup the un-acked events.
 - If you have a single Redis instance, this can introduce downtime into your de-dup worker pool. Consider using some sort of automatic failover with multiple Redis instances.
 - To get better performance out of Redis, you can turn off persistence entirely. This will keep your "seen" event set in-memory. This is only acceptable if you can accept that a crash can result in duplicate events.
-- There is a period of time where the de-dup worker could place the event into the "seen" set and crash before it puts the event into the "processed" queue. When another worker picks up the unacked event, it will discard it immediately. To protect against this, you could theoretically have a "discarded" event set to recover missing events.
+- There is a period of time where the de-dup worker could place the event into the "seen" set and crash before it puts the event into the "processed" queue. To combat this, it would be possible to keep track of the number of times an event has been seen (using the INCR operation, for example). If the number of times is greater than the expected number of duplicates, that would indicate something funky going on, and the duplicate should be allowed. This would eliminate event loss.
 
 This hasn't been implemented yet, but it would be easy enough to do in Go, Python or Ruby. If there is enough interest, I would even be willing to take a crack at it. This seems to be the most promising solution for durable, exactly-once log delivery.
+
+__UPDATE:__ One possible project to use for this solution is [duplog](https://github.com/MrStaticVoid/duplog) ([blog post](https://thestaticvoid.com/post/2013/05/19/overengineering-syslog-redundancy-high-availability-deduplication-and-splunk/)). It appears to be geared more towards Splunk, but might fit in perfectly in some logging pipelines. It has the ability to degrade gracefully in the face of a Redis failure, but also appears to be able to lose events if a worker were to crash directly after recording the event.
 
 ### Wrap-up
 
